Add allure annotations, test patallelng and some fixes

--- a/src/test/resources/local.properties
+++ b/src/test/resources/local.properties
@@ -2,3 +2,5 @@ baseUrl=https://studio.faphouse.com
 browserName=chrome
 browserVersion=132.0
 browserSize=1920x1080
+pageLoadTimeout=10000
+timeout=10000
