--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'io.qameta.allure' version '2.12.0'
 }
 
-def allureVersion = "2.29.1",
+def allureVersion = "2.27.0",
     slf4jVersion = "2.0.16"
 
 allure {
@@ -20,6 +20,12 @@ allure {
     }
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -32,7 +38,6 @@ dependencies {
     testImplementation (
             "com.codeborne:selenide:7.6.1",
             "org.junit.jupiter:junit-jupiter:5.11.4",
-            "org.assertj:assertj-core:3.27.3",
             "com.github.javafaker:javafaker:1.0.2",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "org.aeonbits.owner:owner:1.0.12"
